--- a/project_name/pubspec.yaml
+++ b/project_name/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  font_awesome_flutter: ^10.4.0
 
 dev_dependencies:
   flutter_test:
@@ -58,7 +59,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/splash.png
+    - assets/homeimg.png
+ 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
