--- a/project_name/pubspec.yaml
+++ b/project_name/pubspec.yaml
@@ -61,8 +61,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/splash.png
-    - assets/homeimg.png
+    - assets/
+    - assets/Iconly/Curved/
  
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
