--- a/project_name/pubspec.yaml
+++ b/project_name/pubspec.yaml
@@ -53,7 +53,10 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  fonts:
+    - family: Gilroy
+      fonts:
+       - asset: assets/Font/Gilroy.ttf
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -63,6 +66,7 @@ flutter:
   assets:
     - assets/
     - assets/Iconly/Curved/
+    - assets/Font/Gilroy.ttf
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
